# odoorpc-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini
.github/release-notes/: TEMPLATE.md
.github/workflows/: build-windows-installer.yml  build-windows-pyinstaller.yml  publish-pypi.yml  release.yml
docs/agents/: domain.md  issue-tracker.md  testing.md  triage-labels.md
docs/release-notes/: TEMPLATE.md
odoocli/: __main__.py  cli.py  odoo.py  settings.py
odoocli/commands/: __init__.py  call_method.py  create.py  unlink.py  write.py
odoocli/commands/auth/: __init__.py  info.py  login.py
odoocli/commands/model/: __init__.py  field.py  search.py
odoocli/commands/search/: __init__.py  count.py  (+1 more)
odoocli/tools/: click_types.py  odoo_client.py
odoorpc_cli/: cli.py  settings.py
odoorpc_cli/commands/: __init__.py  call_method.py  create.py  unlink.py  update.py  write.py
odoorpc_cli/tools/: odoo_client.py  version_check.py
packaging/windows/: odoocli.iss  odoorpc_cli.iss
scripts/: bump_version.sh
skills/odoorpc-cli/: SKILL.md
tap/Formula/: odoocli.rb  odoorpc_cli.rb
tests/: conftest.py  test_auth_login.py  test_cli.py  test_cli_update_warning.py  test_command_auth_info.py  test_command_auth_logout.py  test_command_call_method.py  test_command_create.py  test_command_model_field.py  test_command_model_search.py  test_command_search_count.py  test_command_search_read.py  test_command_unlink.py  test_command_update.py  test_command_write.py  test_settings.py  test_tools_click_types.py  test_tools_odoo_client.py  test_tools_version_check.py
(+6 files in other folders)
